update with HW2 auxilary files

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,9 @@ AERO_422_HW1.aux
 AERO_422_HW1.log
 AERO_422_HW1.fls
 AERO_422_HW1.fdb_latexmk
+
+AERO_422_HW2.synctex.gz
+AERO_422_HW2.aux
+AERO_422_HW2.log
+AERO_422_HW2.fls
+AERO_422_HW2.fdb_latexmk
