create HW1 solution and update to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,9 @@ AERO_422_HW2.aux
 AERO_422_HW2.log
 AERO_422_HW2.fls
 AERO_422_HW2.fdb_latexmk
+
+AERO_422_HW1_solutions_part2.synctex.gz
+AERO_422_HW1_solutions_part2.aux
+AERO_422_HW1_solutions_part2.log
+AERO_422_HW1_solutions_part2.fls
+AERO_422_HW1_solutions_part2.fdb_latexmk
