--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,9 @@ AERO_422_HW1_solutions_part2.aux
 AERO_422_HW1_solutions_part2.log
 AERO_422_HW1_solutions_part2.fls
 AERO_422_HW1_solutions_part2.fdb_latexmk
+
+AERO_422_HW2_solutions_part2.synctex.gz
+AERO_422_HW2_solutions_part2.aux
+AERO_422_HW2_solutions_part2.log
+AERO_422_HW2_solutions_part2.fls
+AERO_422_HW2_solutions_part2.fdb_latexmk
