Add HW3 as well as corresponding images

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,9 @@ AERO_422_HW2_solutions_part2.aux
 AERO_422_HW2_solutions_part2.log
 AERO_422_HW2_solutions_part2.fls
 AERO_422_HW2_solutions_part2.fdb_latexmk
+
+AERO_422_HW3_solutions_part2.synctex.gz
+AERO_422_HW3_solutions_part2.aux
+AERO_422_HW3_solutions_part2.log
+AERO_422_HW3_solutions_part2.fls
+AERO_422_HW3_solutions_part2.fdb_latexmk
